Migrated to MongoDB and Dockerized Nitro Reward on 5th of every month Admin commands usable only on official server

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 aiohttp>=3.7.4
 colorama==0.4.4
 discord.py==1.7.2
-numpy>=1.20.1
 python-dotenv==0.12.0
 pychalk==2.0.1
+pymongo[srv]>=3.11.4
 Pillow>=8.2.0
