--- a/.github/workflows/style-check.yaml
+++ b/.github/workflows/style-check.yaml
@@ -1,11 +1,12 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: PokeGambler
+name: Lint & Style Check
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, wip ]
+  workflow_dispatch:
 
 jobs:
   build:
@@ -21,7 +22,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
+        pip install pylint pycodestyle
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: GitHub Action for pylint
-      uses: cclauss/GitHub-Action-for-pylint@0.7.0
+        pycodestyle scripts bot.py launcher.py
+        pylint -f colorized --exit-zero scripts bot.py launcher.py
