--- a/.github/workflows/style-check.yaml
+++ b/.github/workflows/style-check.yaml
@@ -9,20 +9,23 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
-
+  Lint_Styler:
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.8
+    - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: 3.9
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pylint pycodestyle
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Code Style Checks
+      run: |
         pycodestyle scripts bot.py launcher.py
-        pylint -f colorized --exit-zero scripts bot.py launcher.py
+    - name: Run Linting
+      run: |
+        pylint -f colorized scripts bot.py launcher.py
