--- a/.github/workflows/style-check.yaml
+++ b/.github/workflows/style-check.yaml
@@ -3,21 +3,18 @@
 
 name: Lint & Style Check
 
-on:
-  push:
-    branches: [ main, wip ]
-  workflow_dispatch:
+on: [push, workflow_dispatch]
 
 jobs:
   Lint_Styler:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
-        python-version: 3.9
+        python-version: '3.9.x'
+        architecture: 'x64'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
