--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,10 +14,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Set Tag to Latest
+    - name: Set Tag to Commit SHA
       if: endsWith(github.ref, '/main')
       run: |
-        echo "TAG=latest" >> $GITHUB_ENV
+        echo "TAG=${{ github.sha }}" >> $GITHUB_ENV
         echo "SECRET_VERSION=latest" >> $GITHUB_ENV
 
     - name: Set TAG to Beta
@@ -86,17 +86,19 @@ jobs:
     needs: [Build_and_Push]
     steps:
 
-    - name: Set Tag to Latest
+    - name: Set Tag to Commit SHA
       if: endsWith(github.ref, '/main')
       run: |
-        echo "TAG=latest" >> $GITHUB_ENV
+        echo "TAG=${{ github.sha }}" >> $GITHUB_ENV
         echo "SECRET_VERSION=latest" >> $GITHUB_ENV
+        echo "FOLDER=prod" >> $GITHUB_ENV
 
     - name: Set TAG to Beta
       if: "!(endsWith(github.ref, '/main'))"
       run: |
        echo "TAG=beta" >> $GITHUB_ENV
        echo "SECRET_VERSION=1" >> $GITHUB_ENV
+       echo "FOLDER=beta" >> $GITHUB_ENV
 
     - name: Checkout
       uses: actions/checkout@v2
@@ -143,9 +145,9 @@ jobs:
 
     - name: Prepare Secret
       run: |-
-        cd deployments/${{ env.TAG }}
-        kubectl delete secret pokegambler-${{ env.TAG }} --ignore-not-found
-        kubectl create secret generic pokegambler-${{ env.TAG }} \
+        cd deployments/${{ env.FOLDER}}
+        kubectl delete secret pokegambler-${{ env.FOLDER }} --ignore-not-found
+        kubectl create secret generic pokegambler-${{ env.FOLDER }} \
           --from-literal=TOKEN=${{ steps.secrets.outputs.TOKEN }} \
           --from-literal=DISCORD_WEBHOOK_CHANNEL=${{ steps.secrets.outputs.DISCORD_WEBHOOK_CHANNEL }} \
           --from-literal=DISCORD_WEBHOOK_TOKEN=${{ steps.secrets.outputs.DISCORD_WEBHOOK_TOKEN }} \
@@ -160,6 +162,8 @@ jobs:
 
     - name: Deploy to GKE
       run: |-
-        ./kustomize build deployments/${{ env.TAG }} | kubectl apply -f -
-        kubectl rollout status deployment/pokegambler-${{ env.TAG }}
+        cd deployments/${{ env.FOLDER }}
+        ../../kustomize edit set image gcr.io/PROJECT_ID/IMAGE:TAG=gcr.io/pokegambler/pokegambler:${{ env.TAG }}
+        ../../kustomize build . | kubectl apply -f -
+        kubectl rollout status deployment/pokegambler-${{ env.FOLDER }}
         kubectl get services -o wide
