--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -160,6 +160,19 @@ jobs:
           --from-literal=OFFICIAL_SERVER=${{ steps.secrets.outputs.OFFICIAL_SERVER }} \
           --from-literal=MONGO_CLUSTER_STRING=${{ steps.secrets.outputs.MONGO_CLUSTER_STRING }}
 
+    - name: Send Restart Webhook to Discord
+      run: |-
+        changes=$(
+          echo '${{ toJson(github.event.commits) }}' \
+          | jq -r '.[] | select(.message | startswith("[Update]")) | .message' \
+          | awk '{printf "%d. %s\\n", NR, $s}' \
+          | sed "s/\[Update\]//g"
+        )
+        changelog=$([[ $changes ]] && echo \`\`\`md$"\n"$changes\`\`\` || echo "")
+        curl -X POST 'https://discord.com/api/webhooks/${{ steps.secrets.outputs.DISCORD_WEBHOOK_CHANNEL }}/${{ steps.secrets.outputs.DISCORD_WEBHOOK_TOKEN }}' \
+        -H 'Content-Type: application/json' \
+        -d '{"content": "<:update:841643547908243476>\t**Restart Initiated**\nPokeGambler will be updating now.\n\u200b'"$changelog"'\n\u200b\n", "username": "PokeGambler Status Monitor"}'
+
     - name: Deploy to GKE
       run: |-
         cd deployments/${{ env.FOLDER }}
