Added Changelog heading in Restart notification

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -180,7 +180,7 @@ jobs:
           | awk '{printf "%d. %s\\n", NR, $s}' \
           | sed "s/\[Update\]//g"
         )
-        changelog=$([[ $changes ]] && echo \`\`\`md$"\n"$changes\`\`\` || echo "")
+        changelog=$([[ $changes ]] && echo \`\`\`md$"\n"# Changelog"\n"$changes\`\`\` || echo "")
         curl -X POST 'https://discord.com/api/webhooks/${{ steps.secrets.outputs.DISCORD_WEBHOOK_CHANNEL }}/${{ steps.secrets.outputs.DISCORD_WEBHOOK_TOKEN }}' \
         -H 'Content-Type: application/json' \
         -d '{"content": "<:update:841643547908243476>\t**Restart Initiated**\nPokeGambler will be updating now.\n\u200b'"$changelog"'\n\u200b\n", "username": "PokeGambler Status Monitor"}'
