Prevent non-code files from triggering actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,10 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - README.MD
+      - .gitignore
+      - .github/**
   release:
     tags:
       - v*.*.*
