--- a/.github/workflows/style-check.yaml
+++ b/.github/workflows/style-check.yaml
@@ -3,7 +3,13 @@
 
 name: Lint & Style Check
 
-on: [push, workflow_dispatch]
+on:
+  push:
+    paths-ignore:
+      - README.md
+      - .gitignore
+      - .github/**
+  workflow_dispatch:
 
 jobs:
   Lint_Styler:
