--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -134,7 +134,7 @@ jobs:
       uses: google-github-actions/get-gke-credentials@main
       with:
         cluster_name: pokegambler-cluster
-        location: us-central1
+        location: us-central1-c
 
     - name: Get Secrets from GSM
       uses: google-github-actions/get-secretmanager-secrets@main
