--- a/.github/workflows/issues_monitor.yml
+++ b/.github/workflows/issues_monitor.yml
@@ -12,7 +12,7 @@ jobs:
         if: contains(github.event.issue.labels.*.name, 'bug')
         uses: appleboy/discord-action@0.0.3
         with:
-          webhook_id: 876696158993514516
+          webhook_id: "876696158993514516"
           webhook_token: ${{secrets.BUG_WEBHOOK_TOKEN}}
           message: "New Bug reported\n${{github.event.issue.html_url}}"
           color: "#ff3333"
@@ -20,7 +20,7 @@ jobs:
         if: contains(github.event.issue.labels.*.name, 'enhancement')
         uses: appleboy/discord-action@0.0.3
         with:
-          webhook_id: 876701624641409044
+          webhook_id: "876701624641409044"
           webhook_token: ${{secrets.FEATURE_WEBHOOK_TOKEN}}
           message: "New Feature Requested\n${{github.event.issue.html_url}}"
           color: "#0099FF"
