--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,5 @@ Sphinx==4.1.2
 sphinx-rtd-dark-mode==1.2.4
 sphinx-rtd-theme==0.5.2
 sphinx-tabs==3.2.0
+sphinxext-opengraph==0.4.2
 topggpy==1.3.0
