Included no_self_use extension plugin for Pylint

--- a/.github/workflows/style-check.yaml
+++ b/.github/workflows/style-check.yaml
@@ -32,4 +32,4 @@ jobs:
         pycodestyle --max-line-length=85 scripts bot.py launcher.py
     - name: Run Linting
       run: |
-        pylint -f colorized -d non-ascii-name scripts bot.py launcher.py
+        pylint -f colorized -d non-ascii-name --load-plugins=pylint.extensions.no_self_use scripts bot.py launcher.py
