--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,7 @@ on:
 permissions:
   contents: 'read'
   id-token: 'write'
+  packages: 'write'
 
 jobs:
   Build_and_Push:
@@ -44,13 +45,6 @@ jobs:
       uses: actions/checkout@v3
       with:
         ref: ${{ github.ref }}
-
-    - name: Login to GHCR
-      uses: docker/login-action@v2
-      with:
-        registry: ghcr.io
-        username: ${{ github.repository_owner }}
-        password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Auth
       uses: 'google-github-actions/auth@v1'
@@ -81,7 +75,6 @@ jobs:
       with:
           push: true
           tags: |
-            ghcr.io/hyperclaw79/pokegambler:${{ env.TAG }}
             gcr.io/pokegambler/pokegambler:${{ env.TAG }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
