Hotfix for high latency breaking all commands.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,6 +49,7 @@ jobs:
     - name: Auth
       uses: 'google-github-actions/auth@v1'
       with:
+        create_credentials_file: true
         workload_identity_provider: ${{ secrets.GOOGLE_FEDERATED_IDENTITY }}
         service_account: ${{ secrets.GOOGLE_SERVICE_ACCOUNT }}
 
